--- a/result/2022-01-10.md
+++ b/result/2022-01-10.md
@@ -25,9 +25,9 @@
 25. [在天上看飞机是什么体验](https://s.weibo.com//weibo?q=%23%E5%9C%A8%E5%A4%A9%E4%B8%8A%E7%9C%8B%E9%A3%9E%E6%9C%BA%E6%98%AF%E4%BB%80%E4%B9%88%E4%BD%93%E9%AA%8C%23&Refer=top) 252302
 26. [深圳卫健委电话发我后续来了](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E5%8D%AB%E5%81%A5%E5%A7%94%E7%94%B5%E8%AF%9D%E5%8F%91%E6%88%91%E5%90%8E%E7%BB%AD%E6%9D%A5%E4%BA%86%23&Refer=top) 236711
 27. [易烊千玺年度新锐男演员](https://s.weibo.com//weibo?q=%23%E6%98%93%E7%83%8A%E5%8D%83%E7%8E%BA%E5%B9%B4%E5%BA%A6%E6%96%B0%E9%94%90%E7%94%B7%E6%BC%94%E5%91%98%23&Refer=top) 234673
-28. [电梯下坠自救方法](https://s.weibo.com//weibo?q=%23%E7%94%B5%E6%A2%AF%E4%B8%8B%E5%9D%A0%E8%87%AA%E6%95%91%E6%96%B9%E6%B3%95%23&Refer=top) 208468
-29. [广东凉茶有多讲究](https://s.weibo.com//weibo?q=%E5%B9%BF%E4%B8%9C%E5%87%89%E8%8C%B6%E6%9C%89%E5%A4%9A%E8%AE%B2%E7%A9%B6&Refer=top) 203771
-30. [新疆赛里木湖现万华镜旋之空](https://s.weibo.com//weibo?q=%23%E6%96%B0%E7%96%86%E8%B5%9B%E9%87%8C%E6%9C%A8%E6%B9%96%E7%8E%B0%E4%B8%87%E5%8D%8E%E9%95%9C%E6%97%8B%E4%B9%8B%E7%A9%BA%23&Refer=top) 203030
+28. [新疆赛里木湖现万华镜旋之空](https://s.weibo.com//weibo?q=%23%E6%96%B0%E7%96%86%E8%B5%9B%E9%87%8C%E6%9C%A8%E6%B9%96%E7%8E%B0%E4%B8%87%E5%8D%8E%E9%95%9C%E6%97%8B%E4%B9%8B%E7%A9%BA%23&Refer=top) 223077
+29. [电梯下坠自救方法](https://s.weibo.com//weibo?q=%23%E7%94%B5%E6%A2%AF%E4%B8%8B%E5%9D%A0%E8%87%AA%E6%95%91%E6%96%B9%E6%B3%95%23&Refer=top) 208468
+30. [广东凉茶有多讲究](https://s.weibo.com//weibo?q=%E5%B9%BF%E4%B8%9C%E5%87%89%E8%8C%B6%E6%9C%89%E5%A4%9A%E8%AE%B2%E7%A9%B6&Refer=top) 203771
 31. [猫咪冬天也会冷](https://s.weibo.com//weibo?q=%23%E7%8C%AB%E5%92%AA%E5%86%AC%E5%A4%A9%E4%B9%9F%E4%BC%9A%E5%86%B7%23&Refer=top) 189664
 32. [汉堡王和麦当劳是CP](https://s.weibo.com//weibo?q=%23%E6%B1%89%E5%A0%A1%E7%8E%8B%E5%92%8C%E9%BA%A6%E5%BD%93%E5%8A%B3%E6%98%AFCP%23&Refer=top) 187278
 33. [天津6地升为中风险](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A56%E5%9C%B0%E5%8D%87%E4%B8%BA%E4%B8%AD%E9%A3%8E%E9%99%A9%23&Refer=top) 183299
@@ -40,6 +40,7 @@
 40. [柿饼万物皆可包](https://s.weibo.com//weibo?q=%E6%9F%BF%E9%A5%BC%E4%B8%87%E7%89%A9%E7%9A%86%E5%8F%AF%E5%8C%85&Refer=top) 166071
 41. [离开天津须48小时核酸阴性证明和绿码](https://s.weibo.com//weibo?q=%23%E7%A6%BB%E5%BC%80%E5%A4%A9%E6%B4%A5%E9%A1%BB48%E5%B0%8F%E6%97%B6%E6%A0%B8%E9%85%B8%E9%98%B4%E6%80%A7%E8%AF%81%E6%98%8E%E5%92%8C%E7%BB%BF%E7%A0%81%23&Refer=top) 158373
 42. [这就是当代少年的样子](https://s.weibo.com//weibo?q=%23%E8%BF%99%E5%B0%B1%E6%98%AF%E5%BD%93%E4%BB%A3%E5%B0%91%E5%B9%B4%E7%9A%84%E6%A0%B7%E5%AD%90%23&Refer=top) 145750
-43. [TTG晋级总决赛](https://s.weibo.com//weibo?q=%23TTG%E6%99%8B%E7%BA%A7%E6%80%BB%E5%86%B3%E8%B5%9B%23&Refer=top) 131127
-44. [河南中小学放假时间集中在1月18日至25日](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E4%B8%AD%E5%B0%8F%E5%AD%A6%E6%94%BE%E5%81%87%E6%97%B6%E9%97%B4%E9%9B%86%E4%B8%AD%E5%9C%A81%E6%9C%8818%E6%97%A5%E8%87%B325%E6%97%A5%23&Refer=top) 123001
-45. [天津加强离津管理](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E5%8A%A0%E5%BC%BA%E7%A6%BB%E6%B4%A5%E7%AE%A1%E7%90%86%23&Refer=top) 89422
+43. [张继科念新闻稿舌头狂打结](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E7%BB%A7%E7%A7%91%E5%BF%B5%E6%96%B0%E9%97%BB%E7%A8%BF%E8%88%8C%E5%A4%B4%E7%8B%82%E6%89%93%E7%BB%93%23&Refer=top) 137458
+44. [TTG晋级总决赛](https://s.weibo.com//weibo?q=%23TTG%E6%99%8B%E7%BA%A7%E6%80%BB%E5%86%B3%E8%B5%9B%23&Refer=top) 131127
+45. [河南中小学放假时间集中在1月18日至25日](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E4%B8%AD%E5%B0%8F%E5%AD%A6%E6%94%BE%E5%81%87%E6%97%B6%E9%97%B4%E9%9B%86%E4%B8%AD%E5%9C%A81%E6%9C%8818%E6%97%A5%E8%87%B325%E6%97%A5%23&Refer=top) 123001
+46. [天津加强离津管理](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E5%8A%A0%E5%BC%BA%E7%A6%BB%E6%B4%A5%E7%AE%A1%E7%90%86%23&Refer=top) 90044
